--- a/Libs/DICOM/Widgets/Resources/UI/ctkDICOMAppWidget.ui
+++ b/Libs/DICOM/Widgets/Resources/UI/ctkDICOMAppWidget.ui
@@ -114,6 +114,16 @@
     </layout>
    </item>
    <item>
+    <widget class="ctkDICOMTableManager" name="dicomTableManager" native="true">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+    </widget>
+   </item>
+   <item>
     <layout class="QHBoxLayout" name="QueryLayout" stretch="1,0">
      <property name="spacing">
       <number>0</number>
@@ -546,6 +556,12 @@
    <class>ctkDICOMDatasetView</class>
    <extends>QWidget</extends>
    <header location="global">ctkDICOMDatasetView.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>ctkDICOMTableManager</class>
+   <extends>QWidget</extends>
+   <header location="global">ctkDICOMTableManager.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
